samples/_failures_safe/1761182914_0f5c9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_507f2049.c: In function ‘main’:
./samples/SAFE/__tmp_507f2049.c:163:17: error: expected ‘;’ at end of input
  163 |     print_matrix
      |                 ^
      |                 ;
./samples/SAFE/__tmp_507f2049.c:163:5: error: expected declaration or statement at end of input
  163 |     print_matrix
      |     ^~~~~~~~~~~~
